--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <h1 class="title-t4">2023 신년게획</h1>
     <p class="msg"> 꼭 모두 지키자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t2 center done">바디프로필 찍기</div>
+        <div class="bucket img1-t2 center">컴활1급 따기</div>
         <div class="bucket img2-t5 center">살빼기</div>
         <div class="bucket img2 center">독서하기</div>
         <div class="bucket img1-t4 center">여행가기</div>
